finished everything but for problem 10

--- a/mStat2/Homework 1.ipynb
+++ b/mStat2/Homework 1.ipynb
@@ -273,7 +273,15 @@
     "<b>11.)</b> Calculate the hazard function for\n",
     "\n",
     "\n",
-    "$$F(t) = 1 − e^{ −αt^{\\beta}} , ~~~~~~~~~~ t ≥ 0$$"
+    "$$F(t) = 1 − e^{ −αt^{\\beta}} , ~~~~~~~~~~ t ≥ 0$$\n",
+    "\n",
+    "The hazard function is defined as\n",
+    "\n",
+    "$$h(t) = - \\frac d {dt} log (1- F(t))$$\n",
+    "\n",
+    "Therefore,\n",
+    "\n",
+    "$$h(t)= \\frac d {dt} (- \\alpha t^{\\beta} ) = - \\alpha \\beta t^{\\beta-1}$$"
    ]
   },
   {
@@ -284,7 +292,13 @@
     "within the next 24 hours. Let T denote the time that he is released. What is the\n",
     "hazard function for T ? For what values of t is it smallest and largest? If he has\n",
     "been waiting for 5 hours, is it more likely that he will be released in the next few\n",
-    "minutes than if he has been waiting for 1 hour?"
+    "minutes than if he has been waiting for 1 hour?\n",
+    "\n",
+    "$$h(t) = - \\frac d {dt} log (1- F(t)) = - \\frac d {dt} log (1 - t/24) = \\frac 1 {(24 - t)}$$\n",
+    "\n",
+    "The hazard function is largest and smallest at the two endpoints of the 24 hours.\n",
+    "\n",
+    "The longer he waits the more likely it is that he will be released."
    ]
   },
   {
@@ -298,13 +312,97 @@
     "\n",
     "a. Explain why the distribution of N is binomial.\n",
     "\n",
-    "b. Find P(N ≥ 10).\n",
+    "It's binomial because there is only two options: outlier / not-outlier. And because we are sampling with replacement there is a certain probability of each choice to be either a success or not.\n",
     "\n",
+    "b. Find P(N ≥ 10)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.017876217119130344"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy.stats import binom\n",
+    "1 - binom.cdf(9,26,5/26)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "c. In 1000 bootstrap samples, how many would you expect to contain 10 or more\n",
     "of these outliers? Additionally run a bootstrap to compare.\n",
     "\n",
+    "Apparently, from above, we should expect something like 17.8 to contain 10 or more"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample = [0 for i in range(26)]\n",
+    "sample[0:5] = [1 for i in range(5)]\n",
+    "out = 0\n",
+    "for i in range(1000):\n",
+    "    if(sum(np.random.choice(sample,26))>9):\n",
+    "        out += 1\n",
+    "print(out)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "d. What is the probability that a bootstrap sample is composed entirely of these\n",
     "outliers?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.4205444679400115e-19"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "binom.cdf(0,26,21/26)"
    ]
   }
  ],
