--- a/mStat2/Homework 1.ipynb
+++ b/mStat2/Homework 1.ipynb
@@ -254,6 +254,12 @@
     "\n",
     "$$\\text{Var} (X_{(k)} \\frac d {dx} F^{-1} (x)|_{k/(n+1)}) = (\\frac d {dx} F^{-1} (x)|_{k/(n+1)})^2 \\text{Var} (X_{(k)}) = (\\frac d {dx} F^{-1} (x)|_{k/(n+1)})^2 \\frac 1 {n + 2} (\\frac k {n + 1})(1 − \\frac k {n + 1})$$\n",
     "\n",
+    "From https://en.wikipedia.org/wiki/Inverse_functions_and_differentiation , we know\n",
+    "\n",
+    "$$\\frac d {dx} F^{-1} (x)|_{k/(n+1)} = \\frac 1 {( F'\\{F^{−1} [k/(n+1)]\\})} = \\frac 1 {( f\\{F^{−1} [k/(n+1)]\\})}$$\n",
+    "\n",
+    "and therefore the above expression simplifies to the required expression.\n",
+    "\n",
     "c. Use the results of parts (a) and (b) to show that the variance of the pth sample\n",
     "quantile is approximately\n",
     "\n",
@@ -261,9 +267,31 @@
     "\n",
     "where $x_p$ is the pth quantile.\n",
     "\n",
+    "<b>Solution</b>\n",
+    "\n",
+    "It seems to me that we simply plug in the expressions above, which yields\n",
+    "\n",
+    "$$\\frac 1 {(n+2)f^2 (x_p )}p(1 − p)$$\n",
+    "\n",
+    "Clearly, if n is large, this is approximately\n",
+    "\n",
+    "$$\\frac 1 {nf^2 (x_p )}p(1 − p)$$\n",
+    "\n",
     "d. Use the result of part (c) to find the approximate variance of the median of a\n",
     "sample of size n from a N (μ, σ 2 ) distribution. Compare to the variance of the\n",
-    "sample mean."
+    "sample mean.\n",
+    "\n",
+    "Using,\n",
+    "\n",
+    "$$\\frac 1 {nf^2 (x_p )}p(1 − p)$$\n",
+    "\n",
+    "we have\n",
+    "\n",
+    "$$\\frac 1 {n(1/{2 \\pi \\sigma^2})}0.5(1 − 0.5) = \\frac {\\pi \\sigma^2}{2n}$$\n",
+    "\n",
+    "We calculated the variance of the sample mean last quarter, and there, we had\n",
+    "\n",
+    "$$Var(\\bar{X})=σ^2/n$$"
    ]
   },
   {
