--- a/mStat2/Homework #2.ipynb
+++ b/mStat2/Homework #2.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#David Plotz\n",
+    "\n",
+    "##Homework 2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
