--- a/mStat2/Takehome Midterm.ipynb
+++ b/mStat2/Takehome Midterm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -134,7 +134,7 @@
        "array([ 1.19515839])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -177,7 +177,7 @@
        "array([ 1.18138193])"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -433,17 +433,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\text{power} = 1 - \\beta = 1 - \\mathbb{P}(\\text{accept } H_0 | H_1) = \\mathbb{P}(\\text{reject } H_0 | H_1)$$"
+    "$$\\text{power} = 1 - \\beta = 1 - \\mathbb{P}(\\text{accept } H_0 | H_1) = \\mathbb{P}(\\text{reject } H_0 | H_1)= 1 - \\mathbb{P}(\\sum X_i \\leq 1645.234 | H_1)$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1] 0.9350895\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%R\n",
+    "1 - pgamma(1645.234, shape = 300, scale = 6)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -455,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -463,7 +476,7 @@
     {
      "data": {
       "text/plain": [
-       "[1] 0.045\n"
+       "[1] 0.043\n"
       ]
      },
      "metadata": {},
@@ -500,12 +513,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAeAAAAHgCAMAAABKCk6nAAAC91BMVEUAAAABAQECAgIDAwMEBAQF\nBQUGBgYHBwcICAgJCQkKCgoLCwsMDAwNDQ0ODg4PDw8QEBARERESEhITExMUFBQVFRUWFhYYGBgZ\nGRkaGhobGxsdHR0eHh4fHx8gICAhISEiIiIjIyMkJCQlJSUmJiYnJycoKCgpKSkqKiorKyssLCwt\nLS0uLi4vLy8wMDAxMTEyMjIzMzM0NDQ1NTU2NjY3Nzc4ODg5OTk6Ojo7Ozs8PDw9PT0+Pj4/Pz9A\nQEBBQUFCQkJDQ0NERERFRUVGRkZHR0dISEhJSUlKSkpLS0tMTExNTU1OTk5PT09QUFBRUVFSUlJT\nU1NUVFRVVVVWVlZXV1dYWFhZWVlaWlpbW1tcXFxdXV1eXl5fX19gYGBhYWFiYmJjY2NkZGRlZWVm\nZmZnZ2doaGhpaWlqampra2tsbGxtbW1ubm5vb29wcHBxcXFycnJzc3N0dHR1dXV2dnZ3d3d4eHh5\neXl6enp7e3t8fHx9fX1+fn5/f3+AgICBgYGCgoKDg4OEhISFhYWGhoaHh4eIiIiJiYmKioqLi4uM\njIyNjY2Ojo6Pj4+QkJCRkZGSkpKTk5OUlJSVlZWWlpaXl5eYmJiZmZmampqbm5ucnJydnZ2enp6f\nn5+goKChoaGioqKjo6OkpKSmpqanp6eoqKipqamqqqqrq6usrKytra2urq6vr6+wsLCxsbGysrKz\ns7O0tLS1tbW2tra3t7e4uLi5ubm6urq7u7u8vLy9vb2+vr6/v7/AwMDBwcHCwsLDw8PExMTFxcXG\nxsbHx8fIyMjJycnKysrLy8vMzMzNzc3Ozs7Pz8/Q0NDR0dHS0tLT09PU1NTV1dXW1tbX19fY2NjZ\n2dna2trb29vc3Nzd3d3e3t7f39/g4ODh4eHi4uLj4+Pk5OTl5eXm5ubn5+fo6Ojp6enq6urr6+vs\n7Ozt7e3u7u7v7+/w8PDx8fHy8vLz8/P09PT19fX29vb39/f4+Pj5+fn6+vr7+/v8/Pz9/f3+/v7/\n//+fjeXBAAAZ5UlEQVR4nO2deXwURdrHIwh5uQSNvCsIrsv1ipyRN4QcEJIgrJxiEuQI7nLJIgi+\nC0FQWAExSxb11SDmZRGCSCS7gMKivIEkIocaNEF4CQIhHOEICYEg5JxM//HODDlneiZV011TXU89\nX/1AnGme/uEXJl3dVfV4KQhovHgHQNiCgoGDgoGDgoGDgoGDgoGDgoGDgoGDgoGDgoGDgoGDgoGD\ngoGDgoGDgoGDgoGDgoGDgoGDgoGDgoGDgoGDgoGDgoGDgoGDgoGDgoGDgoGDgoGDgoGDgoGDgoGD\ngoGDgoGDgoGDgoGDgoGDgoGDgoGDgoGDgoGDgoGDgoGDgoGDgoGDgoGDgoGDgoGDgoGDgoGDgoGD\ngoGDgoGDgoGDgoGDgoGDgoGDgoGjQXDh/yQg/NlcwUrw5xN5/94QCwHnmAle5/6vRXRjGgqGDQoG\njh6Cq4qrVF5FwYZAs+DSZV0f9GraZXmZ/Rso2BBoFjwlPL2w4ubhcX+0fwMFGwLNgttetf1071H7\nN1CwIdAsuM8ntp929LN/AwUbAs2CMx57KnJaZK8Ox+zfQMGGQPtVdGVKQmxCSqXD6yjYEOg1Ds7b\nXftl4TEbK1e7nwrRDb0EJ7eq/fJAjI0Bz7qfCqHnTn5O1ncpOz5LSGvwMrs7WfOj3P+1SOOUX87Y\nvXHl3Aljw0JDrf+Oe3Hma0tj4/++/VSDw1CwUJiuZu3dHDt/Ymjo0BHRi97bmnryxq+ufwUKFoSS\nH7fEPDc4bPJrcVv2/Xxd7d6wOpoFZ9dg/wYK1ok73ybMC/IduXz7SdfP7tXRLHiEV8uONuzfQMGa\nuWtRG9YvbF7isdtu19D+ET19jvrrKFgbeR+P9Y16e1eOWVsZ7YL3x6m/joLdpyJlXtC8lFI9SuFF\nluG4nRg5bPlJvaqhYGPxS2zI2IRcHQuiYONQ9W3MoCnbi/QtioKNwuG5ftN23dO9LAo2Bkeem3GE\n/O4FBSjYCOwPi8lnVBoF8+dA6LzLzIqjYN6khs67xLA8CuZLeui8i0xPgIJ58v3wmRcYnwIF8+OH\n4TNzmZ8EBfMiwxN6UTAvciaNP+6RE6FgLuwe9JOHzoSCOVAxb5oujwJJQMGe53p4gudOhoI9zncB\nGR48Gwr2NBt+f8OTp0PBnqV8VozjMi6WoGCPciF4m4fPiII9yf5gh+njrEHBHiQ28o7Hz4mCPcbd\nSbEa5zi7Awr2FOfCUnmcFgV7iJ1hLB/rOwcFe4SqmBkOG4l5BhTsCYrGefDmZEOIBZeUUFZGwbUU\nB6RzOzeR4LsbRj7i7f3wyA13KSqj4BrKwtL4nZxE8EdPvZl6sarqUtqynuvJK6PgaqomfMbx7CSC\nk8pr/rM8ibwyCq7m9b/wPDvZ92DbJlhVm6gqo+D7rPsD19OTCe73Qp6SOcifqjIKtvHFCHd21tAP\nMsGm+M4RHRPpFkehYCs/BXn+9nMDyASbtz4+tPdBusoo2MIFvyucE5AJDgg6oaT3mERVGQUryq1B\num3F4C5kghOtj0HKVlBVRsFK2bA03hHwViVDzBN5DoCrQcHsWM51AFwNCmbGJw59SnhAKvj/LP/Q\nIbvgfSP5DoCrIRXc2fIPHZILzgrmPACuBgWz4ZI/7wFwNSiYCbcDab+jsQIFs6BydBrvCDWgYBZM\nN8AAuBq8imbAqrd4J6gDx8H6s30KhwnuztBH8O1bjq9JKzh3SHnjB3kMzYJPhYwvHOnddLDDZnyy\nCjYPP807Qn1IBZuuOfnYCZ7zZ5/FZaXzR9m/Iavgj1fxTtAAMsFXQlu1y/XLUTuixfU7D5Qqyq02\n9m9IKvjSEM8u8G4MMsHD5pR2rlo2VO2ITvuPen2vKOnd7d+QVPCYLN4JGkImuMUtyzC4qKXaER81\ne+ijDtP+0C7Z/g05BW9dzDuBHWSCe++2CD7QU/WQs1eV7DXvnHB4XUrB14M4rTFzCpngdJ/xbaY+\n+pWLA+v1D65GSsETj/BOYA/hVXTh5pUbrro6sF7/4F1hNjqFaQ4nHDte4Z3AAQZ3siqKbMyW729w\nUQDN6jzPQCK4Tw1ODqoqVpsSL+FH9PQDvBM4QiI4swa1I0qXdX3Qq2mX5Q4XF/IJ3vcS7wQqUHxE\nmz5VO2JKeHphxc3D4xxmmEkn+NcA95vAsoNM8JlZUVFR4U+oHdH2/rXXvUft35BO8Px/8E6gBplg\nv6mLhyb236t2RJ9PbD/t6Gf/hmyCv43gnUAVMsHehWUByiHV5aMZjz0VOS2yV4dj9m9IJrg00KOb\nyBJDJrjDQcXvRr7qrUqlMiUhNiHF8Q67ZILf2Mw7gTpkgtc1P/+2r38oVWW5BP84kncCJxBeReeX\nmJI+UJm24QKpBFcEse1f5j5kgsvXpSg74+juo0slODaedwJnkAmO7p+hZAXS7SYik+BTYUx6/+oB\nmeDW1skcF9tSVZZIcNXQX3hHcAqZ4N99Z/nh6JNUlSUSHB/LO4FzyARv85n7t/mP0g0E5BGcM9hY\n07AaQHgVfXrFrGWUk43kETzKM10I3YNQ8Nny0vgNdPO5pRGc+AbvBK4gE/yWd8Gavr4zqCrLIvia\n4aZhNYBM8COZ5t9m5T5CVVkWwdHf8E7gEjLBbXOzOpsvt6aqLIngLIP/NskEv9yty7sX+4ymqiyJ\n4NHneSdwDZngyuRtlefXFFNVlkNw2izeCRoB1wdrI9zlZGIDgII1sefPvBM0BgrWQlVgIe8IjUEh\nOG93homisgyCk4ywG6VrKAQnt9qznKKyBIIrA37lHaFR8CNaAxvW8k7QOISC1VenuAS+4BK/Ut4R\nGodEsNPVKS6BL/hdbg0JKSAR7HR1ikvACy4OpLnm5AWJYKerU1wCXvBbxtmv0AVEy0c/sX3tuDrF\nJdAFFw420H52ziER7HR1ikugC17osGmFISG6ina2OsUlwAVfVt1UynjgMMlNZlM2guMFDpPc45xR\n1yLZg8Mk95hCd0HCDxwmuUWWMVd7q4DDJLcYb9y1KnbgMMkdjhhxPx11cJjkDuEXeCcghvxxIe30\nbsCCU+byTkAOieAbfwpceL2P1zNnqSrDFWwOMeZ+K6qQCB49PGnaY7FFS4dTVYYreOcS3gkoIBHc\n6rZS6HVTueOwa79LwAo2BdFtVsIXEsGdMhRzkqJk/4aqMljBW1bzTkADieBP2o4xKUpiV7plklAF\nlw803p7BLiC6ij6bWKUoG3bSPf+EKnjdB7wTUIGzKim5F2CkvmaNg4Ip+esm3gnoQMF0FA0SYaZd\nPbC9LB1vGHJTaBdgg2gqbgUYdks7J6BgKlYKMVW2PiiYhhJ/wb4D6yX4RpHjaxAFr/+QdwJqNAs+\nPeT4Rb+mzYIu2b8BULDJ7x7vCNRovor2W1A2dm5p2cIR9m8AFJxMsz7aIGgeB7e+rnQ5qyi3HTbR\nAih4yE3eCejRLDh8rXlGgqJs62v/BjzBqQJN5KhFs+C8AT1GNxky2Oew/RvwBI/K5Z3ADUgFm645\nfZaUtSXuw10lDi+DE5w5kXcCdyATfCW0VbtcvxwXB9ZrEF14zMaLz+sQz0hMMfK20E4hEzxsTmnn\nqmWu1tPVaxB9IMbGM8N0iGcgLvyedwK3IBPc4pZlGFyk3vnMGdA+oufv553ALcgE995tEXygp5OD\npGgQXRjMO4F7kAlO9xnfZuqjX6kdIUuD6JVJvBO4B+FVdOHmlRvU91WVpEF0iWgP+msgFGw+k3Za\n/UmoJA2i16/jncBNyASf6u3Tv32vbLUj5GgQbRokwKZ2qpAJHri4QqlcOkjtCDkaRCev4J3AXQib\nchRYfrilvnRFigbRIQI+ZrgPmeBJ8WZF2TSeqjIkwamv8k7gNmSCpz/49Jj+XiOioiikQRI82mE6\ngzAQNqeshbwyIMGZk3kncB+Kx4WmT6kqAxI85WfeCdyHTPCZWZZP5/AnqCrDEXxhFO8EGiAT7Dd1\n8dDE/nupKsMRvCCVdwINkAn2LiwLUA75U1UGI7gwlHcCLZAJ7nBQ8buRL+njwlXJvBNogUzwuubn\n3/b1p/uTDEVwiXDLkRpAeBWdX2JK+oBu7xEogtev551AE7g+uBFMAYZu8N0oZIL3B/a0QlUZiODk\nVbwTaINMcKdFJ7ItUFUGIjhEZV2dSJAJ/nc3nobCEJy2gHcCjZAJXhFLP2EFhuAxl3kn0AiJ4O7d\nuz3wULfu3btTVQYhODOadwKtkAjOroGqMgjB0ad4J9AK4TDpbHlp/Aa6HcAgCL4whncCzZAJfsu7\nYE1f3xlUlSEIXpDOO4FmyAQ/kmn+bVbuI1SVAQi+HcI7gXYIJ93lZnU2X3ZYxO8SAILf+Zx3Au2Q\nCX65W5d3L/YZTVVZfMHlQjQIbgQywZXJ2yrPrymmqiy+4C3v8k6gA/iwwSnmoDu8I+gACnZK6n/x\nTqAHKNgp40S/S2mDQnDe7gyaiw7RBZ96kXcCXaAQnNxqD81Ob6ILnpXBO4Eu4Ee0E24A2UOGXPBR\nyqkrggt+awfvBPpALtiH8ppDbMGlg4SeS1kHUWu7pla8mjSlqiy24I3i7QytDongU/4ROQUFDx8v\noKostGBzsHg7Q6tD9BFteq/7v+T6iP76dd4J9ILwe/C5IZPbyCR45BXeCfSC9CKrKiGqkK6yyIKz\nonkn0A1s8a7GHwVe8W0HtnhX4apDAwpxwRbvKryxh3cC/cAW747cDaTrlGxosMW7I+sTeCfQEWzx\n7kBVkNgLRhuCLd4d+HIZ7wR6QjZMKrK6NUlyq3JEPu8EekJ0L7rnA0/uVpRcuofDogr+YRrvBLpC\nIjj4zfJvOmbIInjySd4JdIVEcIs7irLL1ySH4EsjeSfQFxLB3SzjfvPYJa4Eq0z3EFRwzP/yTqAv\nJIJ3tg7MVwr69XUhWOVZopiCfx3CO4HOEF1FX9tp+ZAuS1qkdoTT6R5iCv7vTbwT6AzVvGi1I5xO\n9xBSsMmfbpW78aGaF616iLPpHkIK/ofgu2I5ose8aPXpHkIKHiZs8w1nEAu+4WKnStXpHiIKPjqb\ndwLdIRE88pJyeWCTZiGu5ik5foMWUfCEM7wT6A6JYO9sJfKlexWLxrk4sN436C8ibHQVbx/tHFe/\nQ0EhFPzkaUW59RBZyfIiG7MjNYfzNAA21XGASHBq5ah/KcrBDk4OgtI/+JZ4nzmNQyI4vJN3ux5K\nWjvVLSsA9Q+O28o7AQPIrqIrzh1SvktTPQJO/2BTALSbHFY0Lx+F0z/4s5W8E7BA8/JRMP2Dq/zp\ntokSBM3LR8H0D/7nUt4JmKB9+SiQ/sHmQMq1V4KAy0er+Xo+7wRswOWj1YTl8U7ABlw+ep+DdJth\niwP50yTa9jJiCR6VwzsBI0gEnx5y/KJf02ZBdH3OhRKcMYl3AlaQCPZbUDZ2bmnZQrpVs0IJjhC+\n+YYzSAS3vq50Oasot+Hu+H4S4HPCaogeNqw1z0hQlG19qSqLJHjqD7wTMINEcN6AHqObDBnsc5iq\nskCCzwPassEesqvorC1xH+4qoasskOA/pfJOwA7cbVZRrkB80F8DClaUhaoz+oGAvQuVgiDeCVhC\nIniEV8uONqgqCyN4eRLvBCwh+oiePseNyqIIvjMQQPsr5xAJ3h/nRmVRBK/ZyDsBU6S/yCrxq+Ad\ngSkkgr+unfZc9TV5ZUEEr/uAdwK2kAh+u8/azGJFKc5c22c1eWUxBJf/ZynvCGwh+oguiAts3r59\n88A4mp2yxBC8+R3eCRhD+j3YlJ9PebEphGCgc2XrQXGRZfqUqrIQgpPf5J2ANWSCz8yKiooKf4Kq\nsgiCzYHgVvTbQybYb+rioYn991JVFkHw3td4J2AOmWDvwrIA5ZA/VWURBIdc452AOWSCOxxU/G7k\nt6SqLIDgb2bxTsAeMsHrmp9/29ef7rGpAIKfO887AXsIr6LzS0xJH7jYZ0cF4wvOmMw7gQcgFHwz\n1wpVZeMLfgHsXNl6kAme79WxswWqyoYXfGI87wSegExwqyP0lQ0vOPon3gk8AZlgX7pVKzaMLvgs\n4Lmy9SATfKRzzEoLVJWNLvhlgJtiqUAmeJBvzFILVJUNLvg6tJ2/nUAm2Id27ahieMHTjvJO4BnI\nBL/2GX1lYwuGu17UDsKP6CYdu1ugqmxoweZwyg0phIVM8Nn7UFU2tODty3gn8BRy3skqDaZcSScu\nct7JWr2FdwKPIeWdrKuhgDpAN4KUd7JkGSJZkfFOVsZE3gk8iIR3suQZIlmR8E5W8jLeCTyJfHey\nJBoiWZHvTtbqRN4JPIp0d7JkGiJZ0WHpSpH1/5hJlO6jMg2RrGheunKq5wNP7lYUx/bgxhQs1RDJ\niualK8Fvln/TMUMUwXINkaxoXrrS4o6i7PI1CSIY/mpCezQvXem2x/L3YuwSMQRLNkSyonnpys7W\ngflKQb++QgiWbIhkRfvSlWs7LR/SZUmL7F83oOCrQ+UaIlnRaxuleg2ii4/ZePEF91MxYrobTz1F\nh0xwZxtPD13zq7MD6zWI3jfTRq9h+iTUD+mGSFbIBG8K2JW5O+Tz71+gWI9nuI9o+YZIVsgEd7pi\n+eFqN6XsN2oHCdIgWr4hkhUywY9nWH7I6KBccRQsTIPo0uB7vCPwgEzwxvYL4xe1X/9z11UORwjT\nIPod+YZIVgivoo8vmRqToVz4xvEIURpEyzhEskIo2Hwm7bTaN1pxGkTLOESyQib4VG+f/u17qW7p\nL0iDaCmHSFbIBA9cXKFULh2keogQDaLlHCJZIRPc1vo4/1YbqsqGErz5dd4JeEEmeFK85QplE92m\nJUYSfCzM8RNGEsgET3/w6TH9vUZERVFIM5DgWwHwtyx0BpngbbWQVzaOYPNYwK3rGkOGphxxK3gn\n4IgEgg+OUh/BywF8wVf93Vh3AwdiwdTtowwi2DT8e94RuEIsuC1tZYMIfvND3gn4Al3w3mjeCThD\nLJi6QZghBOcGOJ1kJAmwL7LKQ0/zjsAb2IJfpbgxAxTQgrfO5p2AP5AFnxriMFFMPgALvjf4IucE\nRoBEcHYNVJW5C568h3MAQ0AieIRXy442qCrzFrxhCd/zGwSij+jpc9yozFnwj1I/YqiDSPD+ODcq\n8xV8Ozif5+mNA9CLLPN4SWfJOgBU8No1HE9uKGAKPhgl5zIGFUAKLggu5HZuowFR8LlgKZrWkQFQ\ncGroFU5nNiLwBG9+XvZHwA2AJrhq3ismHuc1LMAEl0S9z+GsRgaW4PxhqvtpygwowdmDszx+TqMD\nSXDa0DxPn9L4ABKciJfPKoARbI7By2c1oAgunYCXz6oAEXwjbIcHzyYSMASfDpB7hZkLQAhOx8tn\np0AQ/OnYO546lXiIL/jqq9E4v905ogv+JXrcIU+cR1jEFpwdOQYn17lGZME/jYrKZH0O4RFXcMao\nyONszwACUQV/P2zKzyzrg0FMwUefnXKCXXVQiCh4/+ApJ1nVBocegj3bdeXLwTNz2FQGiWbBHu26\ncuerJUEReGlFg2bBHuu6ciFx5jMR7x/Dh750aBbska4rJxOm+EUknES59GgWzLrrivnY+xH+MxPx\n266baBbMrutK1dWML9dF+0fFn8Clgu6j/Spa764rRSf3bV41Z0xIaNjkhe9vP+NeEaQGBv2DqyES\nXFyUc+bYkZQvtm9M+OvqmAUvhoaEjp8Xu+XAKXzCqxN6Ca7XP/iLCBvdwhoc8GqYlUBf34CwsCDf\n+wwYEDYyYtrsmL/Ert+4fU9KxvHrlOmRRmFwJ6u8yMbfcZqjEWB3J+vzde7kQXSG3Z0sFGwI2N3J\nQsGGgN2dLBRsCNjdyULBhoDdnSwUbAjY3clCwYaA3YwOFGwIUDBwUDBwUDBw2Ane19W3Pi2Z4f1v\nzEo3Y1a5eQtmpds1+P/e1fW+jhoE2zFEt0r2xG9nVppd6MVHWVXOj6Q5GgUzAgWTg4IbgIIpQMHk\noOAGoGByUHADeAkO162SPev/yaw0u9BLfmBVuWACzdH6CWa3UUoluwUP7EKXs5vrTRVaP8GIIUHB\nwEHBwEHBwEHBwEHBwEHBwEHBwNFFcHb1ysNwb2/vkXoUVOzrHevXbqquNyXqSusd+sqzbfxO277S\nPXRdafLQegg2+Te9/0Wn1OzsSzoUrKG2XmWHjVfClulYuV5UvUMP+Nu1BbZb3PqHri1NEVoPwe9F\n3Bdc4e04eVoLdfX2/4eipHdlUlrv0Fk9zEqZbSMo3UPXlaYIrYPgc91z7gs+127UkxMuay9YW7i2\nXkKkohQ+qLaGVXNpvUNvGTOj6/MXrV/pHrquNEVo7YKrQvYU3Bd8qMee7Gh/zQVrqasXO83yp9ar\nmEVpvUPHNfn4zCsDrV/pHrquNEVo7YITJinVgq3cbXJDc8X63K9n/ctws6mOfxnqSjf8SjsfWr5J\nljYtUBiEritthTC0dsFRbXwe9vKxPt7+Ls3yR7bZLc0Va6irl9JLUQ7/TrfC9UvrHXqXxUJ5syKF\nQei60hShtQsuvHz5eJPLZUpyXlq7b2/HhGguWEtNveS8yg67Sp5frl/leqX1Dl3ik1S8KIhJ6LrS\nFKF1GQfbPqJb7VbWPtZmjOtp2HRU17NU/qG3z0u6DinrSusd+tverYdfZBO6rjR5aLyTBRwUDBwU\nDBwUDBwUDBwUDBwUDBwUDBwUDBwUDBwUDBwUDBwUDBwUDBwUDBwUDBwUDBwUDBwUDBwUDBwUDBwU\nDByZBW8ONJv6fck7BWNkFmwO3Bo/nncI1sgsWDnxeKc83hlYI7VgZSjVvp5CIrXg9N4dM3lnYI3M\ngst6HEwcpPOaVMMhs+AVk5SqgZt5p2CMzIKlAAUDBwUDBwUDBwUDBwUDBwUDBwUDBwUDBwUDBwUD\nBwUDBwUDBwUDBwUDBwUDBwUDBwUDBwUD5/8BVVXt/RPFpUkAAAAASUVORK5CYII=\n"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%R\n",
+    "x <- seq(4.5,6.5, by = 0.1)\n",
+    "plot(x, 1 - pgamma(1645.234, shape = 300, scale = x), type = 'l')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "$minimum\n",
+       "[1] 5.765994\n",
+       "\n",
+       "$objective\n",
+       "[1] 4.761707e-07\n",
+       "\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%R\n",
+    "minimize_this <- function(p){\n",
+    "    abs(0.8 - 1 + pgamma(1645.234, shape = 300, scale = p))\n",
+    "}\n",
+    "optimize(f = minimize_this, interval =c(5,6))"
+   ]
   }
  ],
  "metadata": {
