--- a/mStat2/Homework 4.ipynb
+++ b/mStat2/Homework 4.ipynb
@@ -397,19 +397,127 @@
     "normally distributed and that the standard deviation of a single measurement in\n",
     "either group is σ = 5.\n",
     "\n",
-    "a. What will the standard error of Y − X be?\n",
+    "a. What will the standard error of $\\bar{Y} − \\bar{X}$ be?\n",
+    "\n",
+    "$$\\text{squared standard error} = \\frac {s_X^2} n + \\frac {s_Y^2} m = \\frac {25}{25}+ \\frac {25}{25} = 2$$\n",
+    "\n",
+    "<b>Therefore the standard error is $\\sqrt{2}$.</b>\n",
     "\n",
     "b. With a significance level α = .05, what is the rejection region of the test of\n",
-    "the null hypothesis $H_0 : μ_Y = μ_X$ versus the alternative $H_A : μ_Y > μ_X$ ?\n",
-    "\n",
-    "c. What is the power of the test if $μ_Y = μ_X + 1$?\n",
-    "\n",
+    "the null hypothesis $H_0 : μ_Y = μ_X$ versus the alternative $H_A : μ_Y > μ_X$ ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.3261743073533476"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "norm.ppf(0.95)*sqrt(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Therefore, if $\\bar{Y} - \\bar{X}$ is larger than 2.326, we will reject the null hypothesis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "c. What is the power of the test if $μ_Y = μ_X + 1$?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.17421894148057504"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 - norm.cdf(1.326, scale = sqrt(2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "d. Suppose that the p-value of the test turns out to be 0.07. Would the test reject\n",
     "at significance level α = .10?\n",
     "\n",
-    "e. What is the rejection region if the alternative is $H_A : μ_Y = μ_X$ ? What is the\n",
+    "<b>Yes, the p-value is smaller than the significance level</b>\n",
+    "\n",
+    "e. What is the rejection region if the alternative is $H_A : μ_Y \\neq μ_X$ ? What is the\n",
     "power if $μ_Y = μ_X + 1$?\n",
     " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rejection region :  -2.7718076487 2.7718076487\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Rejection region : \", -norm.ppf(0.975)*sqrt(2), norm.ppf(0.975)*sqrt(2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.10920200825334478"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(1 - norm.cdf(3.77, scale = sqrt(2)) + norm.cdf(-1.77, scale = sqrt(2)) )"
    ]
   },
   {
@@ -417,7 +525,15 @@
    "metadata": {},
    "source": [
     "<b>11.32</b> If $X ∼ N (μ_X , σ_X^2 )$ and Y is independent $N (μ_Y , σ_Y^2 )$, what is π = P(X < Y ) in\n",
-    "terms of $μ_X , μ_Y , σ_X$ , and $σ_Y$ ? "
+    "terms of $μ_X , μ_Y , σ_X$ , and $σ_Y$ ? \n",
+    "\n",
+    "$$\\pi = \\mathbb{P}(X < Y) = \\mathbb{P}(X - Y < 0)$$\n",
+    "\n",
+    "<b>Because the sum of normal random variables is also normal, we have<b>\n",
+    "\n",
+    "$$X-Y \\sim N[\\mu_X - \\mu_Y, σ_X^2 + σ_Y^2 ]$$\n",
+    "\n",
+    "<b>and therefore,</b>"
    ]
   },
   {
@@ -462,8 +578,38 @@
     "\n",
     "</table>\n",
     "\n",
-    "a. Plot the differences versus the control rate and summarize what you see.\n",
-    "\n",
+    "a. Plot the differences versus the control rate and summarize what you see."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAY0AAAEACAYAAABPiSrXAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAFwBJREFUeJzt3X2QnVV9wPHvJpts3jbBACYhCWxQXoy1VbEhU0G3VSBo\nq1K1hLZWi6Nt6aDWtoaEGdypU0txGA3OAJ0BrS+DwFSqRTE1OOxoaSEDEghIIBvFIYsBVExgNxAS\nbv845859srmXnN177z7P3ef7mXnmnnue5977O2dvzi/Pc869FyRJkiRJkiRJkiRJkiRJkiS12ZeA\nJ4FtmbqFwGbgUeD7wFGZfeuBHcB24OxM/WnxOXYAG9sYryQpR2cCb+DQpHEF8KlYXgdcHssrga3A\nDKAPGAK64r4twKpYvg1Y07aIJUm56uPQpLEdWBTLi+N9CGcZ6zLHbQJWA0uAhzP1a4Fr2xGoJGni\nprXpeRcRLlkRb6sJ5DhgV+a4XcDSOvXDsV6SVCDtShpZlbhJkjpcd5ue90nCZandhEtPT8X6YWB5\n5rhlhDOM4VjO1g/Xed4h4FWtDlaSpridwKvzDiKrj8MnwqtzF5dw+ET4TGAFoSHVifC7gdPj/UYT\n4Z1yxjKQdwCJBvIOINFA3gEkGsg7gAQDeQeQaCDvABIN5B1AopaNna040/gG8FbgGOBx4DJCkrgZ\n+DDwGPAn8difxPqfAAeAi6g15iLg34HZhKSxqQWxSZJaqBVJ44IG9W9vUP/ZuI11L/C6FsQjSWqT\nyZgIL6PBvANINJh3AIkG8w4g0WDeASQYzDuARIN5B5BoMO8A9PI6ZU5DkoqkZWOnZxqSpGQmDUlS\nMpOGJCmZSUOSlMykIUlKZtKQJCUzaUiSkpk0JEnJTBqSpGQmDUlSMpOGJCmZSUOSlMykIUlKZtKY\nXLOA44EZeQciSWXQwV+NPu290DMKrxiB2c8Ab847Ikml0cFjZ3M6teHLYc4I/LgClQp8pxITx6y8\nA5NUCp06djatUxt+Dpz+m5AwqtuxzwGvzjswSaXQMWPnY8ADwH3Alli3ENgMPAp8Hzgqc/x6YAew\nHTi7zvN1TMPHOBXmj8LumDAerEDPPmBe3oFJKoWOGTt/RkgSWVcAn4rldcDlsbwS2EqYJO4Dhjh8\nor5jGn64uZfBglE48zcwdxRm/FneEUkqjY4ZO38GHD2mbjuwKJYXx/sQzjLWZY7bBKwe89iOaXgD\nrwX+EDgx70AklUrH/EZ4BbgduAf4SKxbBDwZy09SSyDHAbsyj90FLG1zfJPtIeA7wE/zDkSSJqK7\nzc//ZuAXwLGEeYztY/ZXePkM2OlnFpI0pbQ7afwi3j4N/CewinB2sRjYDSwBnorHDAPLM49dFuvG\nGsiUB+MmSarpj1tHmQP0xvJc4E7CiqgrqM1dXMLhE+EzgRXATqBrzHN65iFJ49cRY+cKQhLYCjxI\nmOiGsJrqduovud1AWDW1HTinznN2RMMlqWBKO3aWtuGS1ISOWT0lSZpCTBqSpGQmDUlSMpOGJCmZ\nSUOSlMykIUlKZtKQJCUzaUiSkpk0JEnJTBqSpGTt/pZbtdZ84G2EL3K8HdibbziSVGxl/u6pJTB3\nGN68F87YC3OfCHWSdESlHTtL23Do/Xf45H6oVML2D/th/tfyjkpSR/ALC8tn5onwlhm1+2fOgBl9\nuYUjqZRMGh1j9Adw5SiMELbPjcLenwJnADNe/rGSVE4lvjzFDOi9AboPwPQDMHcUfmsPnPgs9G4F\n5uUdoKTCKu3YWdqGZ8yGBd+GS14McxsHK/C+fTDrs3kHJqmwnNMosX0w/dXwjrhcehrwh7Ng9spc\no5JUCiaNjnTgLvi3F+AgsA+4bhSeuzPvqCRpsq0BtgM7gHV19nt5KpgPvXfB/FGY8zzMvwU/qCmp\nsSk5dk4HhoA+wmqgrcBrxhwzJRs+QV3AMmBx3oFIKrwpOaexipA0HgNeBG4E3p1nQAVXAXYBuyf4\n+JNgwb0w+1lYcB9wSutCkzRVFSlpLAUez9zfFevUerNh7o9g4PXw03nwmd+GuT8E5uQdmKRiK9J1\n8NTTp4FMeTBuGp/XwLGz4RPxPw0XT4ONs2DnSuCeXCOT1Ar9cZvSVgObMvfXc/hkuHMarXEi9O6D\nvfF7rJ6twIJR4KS8A5PUFlNy7OwGdhImwmfiRHib9X4ZTnkOLn0JTn0Oer+Sd0SS2mbKjp3nAo8Q\nJsTX19k/ZRuegy7gTwiX+86P9yVNTaUdO0vbcElqwpRccitJKjiThl7OMYTPzyzKOxBJmggvT02a\nae+B2SNw8h6YvQ9mXph3RJImrLRjZ2kbPsnmw6wRuCcuyX2kAnNGgeV5ByZpQpzTUFsth6MPwmnx\n7snAyfuBV+UYkySNm2cakyOeaWyJZxoPV880luUdmKQJKe3YWdqGT75p7wqJ49V7YPYozPxQ3hFJ\nmrDSjp2lbXhOFgJvAl6ZdyCSmlLasbO0DZekJjgRLkmafCYNSVIyk4YkKZlJQ2Nl3xM9hK+nPzan\nWCSpKU6Et88rYMEdMO0AzHoWur4Ac/bCklGY9TzMvB66LgP+Bpidd7CSxqW0Y2dpG95+CzbBh1+A\nfRXYWIHeClwXP9z3+QosrMC6g3DWCPQ+AMzKO2JJyUo7dpa24e3XMwJPxSTxygpMq8CL8f6xFXgg\nll+qwO89B/xZ3hFLSuaSW7XazGfgfuAg8CvgROC7hPfaHmpfO9UFnDwNOCqPKCVpPDzTaJ9zYO4I\n/MUoHHsQPvQSLKrA6gosqMCfH4QnKvDflXDcYb/fLqm4Sjt2lrbhk+RU4K+Bi2D+Nph2ELqfBy6D\nBbfC7L0w/+fA2ZMQSw9wNP52udQKhR87B4BdwH1xOzezbz2wA9jOoYPPacC2uG9jg+ctfMOnmFnk\nMmj3fAJm7IfZL8C8R/F3PKRmFX7s/DTwyTr1K4GtwAygDxiiNihtIfy0KMBtwJo6jy98w9W0M+GY\nEXgsTroPHIAF9+QdlNThOmIivN7/UN8NfAN4EXiMkDROB5YAvYTEAfBV4D1tjE3FtQrO74YTCG+h\nv58OI7+Td1CSgnYmjYsJy3Gup7bS5jjCZauqXcDSOvXDsV7l8zj8cD/sj3d/BMx6Ks+AJNV0N/HY\nzcDiOvWXAtcA/xTvfwa4EvhwE6+VNZApD8ZNU8c34ecfhFPeAie9BP8zHfb5mRBpfPrj1pH6CBPc\nAJfErWoT4fLUYuDhTP0FwLV1nss5jXKYRnjDvw9/YlZqhcKPnUsy5b8Dbojl6kT4TGAFsJPa3Mfd\nhATShRPhZdIDfAxmfxH4U1xiK7VD4cfOrwIPEOY0vgUsyuzbQJgA3w6ck6mvLrkdAq5q8LyFb7jG\nZTrM/x/4g1H41wqc8hzM++I4Hv7nsPDHsHALLpyQXk5px87SNnyKeiuseBYOxO+1+lUFZu4HFhz5\noV1rYdEI3FqBWyrwihEO/TyQpJrSjp2lbfgU9Q5YvSckjEoFDlZg3j4OvbzZwNH/C9+s1B57fQUW\n/lfbI5Y6U0d8TkM6krvggQNwdQUeAT7+InQ9Cuw+8kMr+2E0c38EeOnF9oQpqVN5pjH1rISj7obe\n3bDgO6T/SuDboXcErqrAlRWYM0JYSCHpcKUdO0vbcNX1FlhwI8z/OvC7eQcjFVhpx87SNlySmuCc\nhiRp8pk0JEnJTBqSpGQmDUlSMpOGJCmZSUOSlMykIUlKZtKQJCUzaUiSkpk0JEnJTBqSpGQmDUlS\nMpOGJCmZSUOSlKyZpPF+4CHgIPDGMfvWAzuA7cDZmfrTgG1x38ZMfQ9wU6y/CzihibgkSQV0KnAy\ncAeHJo2VwFZgBtAHDAFdcd8WYFUs3wasieWLgKtj+Xzgxgav6e9pSNL4FWrsHJs01gPrMvc3AauB\nJcDDmfq1wLWZY6o/1dkNPN3gtQrVcEnqEIX+EabjgF2Z+7uApXXqh2M98fbxWD4A7AEWtiE2SVIT\nuo+wfzOwuE79BuDW1oeTZCBTHoybJKmmP24td6SkcdYEnnMYWJ65v4xwhjEcy2Prq485HngixrQA\n+HWD5x+YQEySVCaDHPof6k+36olbdXmqK1P+L8J8xUxgBXASYQJ8N7CXMHfRBXwA+HbmMR+M5fcB\nP2hRXJKkgjiPMA+xj5AQvpfZt4Gwamo7cE6mvrrkdgi4KlPfA9xMbcltX4PXdCJcksavtGNnaRsu\nSU0o9OopSdIUZdKQJCUzaUiSkpk0JEnJTBqSpGQmDUlSMpOGJCmZSUOSlMykIUlKZtKQJCUzaUiS\nkpk0JEnJTBqSpGQmDUlSMpOGJCmZSUOSlMykIUlKZtKQJCUzaUiSkjWTNN4PPAQcBN6Yqe8D9gH3\nxe3qzL7TgG3ADmBjpr4HuCnW3wWc0ERckqQCOhU4GbiDw5PGtgaP2QKsiuXbgDWxfBG15HI+cGOD\nx7fsx9ElqUQKNXamJo0lwMOZ+2uBa2N5E3B6LHcDTzd4rUI1XJI6RMvGznbNaawgXJoaBM6IdUuB\nXZljhmNddd/jsXwA2AMsbFNskqQJ6j7C/s3A4jr1G4BbGzzmCWA58AzhDORbwGsnGmAdA5nyYNwk\nFc/R0Hs5zDwVnv8/GLkMeD7voEqiP26FNPbyVKP9Yy9PXQBcE8ubgNWx7OUpqfPNgnmPwkdfgG9X\n4J2j0LsZ6Mo7sJIq1Nh5B2FVVNUxwPRYPpFwSeqoeP9uwtxFF4dPhFcTyFqcCJc63Vvh1L3wUgUq\nFXihAvP2Ef7zqMlXiLHzPMI8xD5gN/C9WP9e4EHCnMa9wDszj6kuuR0CrsrU9wA3U1ty29fgNQvR\ncElH1N8gaRyXd2AlVdqxs7QNlzpMvDz1V5nLU/Nvx8tTeSnt2Fnahksd6GjovQ6OvhPmXgHMyjug\nEivt2FnahktSEwr/OQ1J0hRk0pAkJTNpSJKSmTQkSclMGpKkZCYNSVIyk4YkKZlJQ5KUzKQhSUpm\n0pAkJTNpSJKSmTQkSclMGpKkZCYNSVIyk4YkKZlJQ5KUzKQhSUrWTNL4HPAwcD9wC7Ags289sAPY\nDpydqT8N2Bb3bczU9wA3xfq7gBOaiEuSVEBnUUs6l8cNYCWwFZgB9AFD1H5MfguwKpZvA9bE8kXA\n1bF8PnBjg9f0514lafwKN3aeB3w9ltcD6zL7NgGrgSWEM5OqtcC1mWNOj+Vu4OkGr1O4hktSByjc\nb4RfSDhzADgO2JXZtwtYWqd+ONYTbx+P5QPAHmBhi2KTJLVI9xH2bwYW16nfANway5cC+4EbWhjX\nyxnIlAfjJkmq6Y9b4XwIuBOYlam7JG5V1UtPizn08tQFwDWZY1bHspenJKm1CjF2rgEeAo4ZU1+d\nCJ8JrAB2UpsIv5uQQLo4fCK8mkDW4kS4JLVSIcbOHcDPgfvidnVm3wbCqqntwDmZ+uqS2yHgqkx9\nD3AztSW3fQ1esxANl6QOU9qxs7QNl6QmFG71lCSpBEwakqRkJg1JUjKThiQpmUlDkpTMpCFJSmbS\nkCQlM2lIkpKZNCRJyUwakqRkJg1JUjKThiQpmUlDkpTMpCFJSmbSkCQlM2lIkpKZNCRJyUwakqRk\nzSSNzwEPA/cDtwALYn0fsI/6vx1e/Y3wHcDGTH0PcBO13wg/oYm4JEkFdBa1pHN53CAkjW0NHrMF\nWBXLtwFrYvkiasnlfODGBo/3N8IlTYYZ0HsNzNkD856C7o/mHVCTCjd2ngd8PZb7qJ80lhDOTKrW\nAtfG8ibg9FjuBp5u8DqFa7ikqWjelXDGCDxWgXsr8MoR4J15R9WElo2drZrTuJBw5lC1gnBpahA4\nI9YtBXZljhmOddV9j8fyAWAPsLBFsUnSOHX/MXx+TrhS/kZgwxyYd17eURVB9xH2bwYW16nfANwa\ny5cC+4Eb4v0ngOXAM4Te/hbw2qYjlaTJ8wzs7IM3xbuPvAj7f5lnQEVxpKRx1hH2fwh4B/C2TN3+\nuAH8GNgJnEQ4s1iWOW4ZtTOPYeB4QsLpJkyq/7rBaw5kyoNxk6QW+s0n4MLvwV0z4cmD8O09sP8L\neUc1Dv1xK5Q1wEPAMWPqjwGmx/KJhMRwVLx/N2HuoovDJ8KvieW1OBEuKX+vBdYDnwCOzTmWZhVi\n7NwB/JzDl9a+F3gw1t3LoZNH1SW3Q8BVmfoe4GZqS277GrxmIRouSR2mtGNnaRsuSU0o3OopSVIJ\nmDQkSclMGpKkZCYNSVIyk4YkKZlJQ5KUzKQhSUpm0pAkJTNpSJKSmTQkSclMGpKkZCYNSVIyk4Yk\nKZlJQ5KUzKQhSUpm0pAkJTNpSJKSmTQkSclMGpKkZM0kjc8A9wNbgR8AyzP71gM7gO3A2Zn604Bt\ncd/GTH0PcFOsvws4oYm4JEkF1JspXwxcF8srCYlkBtAHDAFdcd8WYFUs3wasieWLgKtj+Xzgxgav\n2bIfR2+z/rwDSNSfdwCJ+vMOIFF/3gEk6M87gET9eQeQqD/vABK1bOxs5kzj2Ux5HvDLWH438A3g\nReAxQtI4HVhCSDRb4nFfBd4Ty+8CvhLL3wTe1kRcRdCfdwCJ+vMOIFF/3gEk6s87gAT9eQeQqD/v\nABL15x3AZOtu8vH/DHwA2EftDOI4wiWmql3AUkIS2ZWpH471xNvHY/kAsAdYCPy6yfgkSS10pDON\nzYQ5iLHbH8X9lwLHA18GvtCmGCVJU8zxwIOxfEncqjYRLk8tBh7O1F8AXJM5ZnUsdwNPN3idIcK1\nOTc3Nze39G2IAjgpU74Y+FosVyfCZwIrgJ3UJsLvJiSQLg6fCK8mkLU0ngiXJHWo/yBcqtpKmLx+\nZWbfBkJm2w6ck6mvLrkdAq7K1PcAN1NbctvXrqAlSZIkldgAYaXVfXE7N7NvvB8cnGxrCLHtANbl\nGAeEJc8PEPqwutR5IWGBw6PA94GjMsc36ttW+xLwJOHvVTWRuNr9N68X5wDFem8uB+4AHiLMK34s\n1hetPxvFOUCx+nMW4TL6VuAnwL/E+qL1Z6M4ByhWf06aTwOfrFM/kQ8OTqbpMaY+QoxbgdfkEEfV\nzwhv9qwrgE/F8jrg8liu17ft+pqZM4E3cOhgPJ64JutvXi/Oor03FwOvj+V5wCOE91zR+rNRnEXr\nT4A58babcLn8DIrXn43ibHt/Fvm7p7rq1E3kg4OTaVWM6TFCjDcSYs7T2H7MfpDyK9T6qV7frqI9\nfgQ800Rck/U3rxcnFOu9uZswGAA8R1ihuJTi9WejOKFY/QkwGm9nEv4j+AzF689GcUKb+7PISeNi\nwndbXU/tVPA4Dv2AYPWDg2Prsx8cnEzZDylCLb68VIDbgXuAj8S6RYRLLsTbRbHcqG8ny3jjyvNv\nXtT3Zh/hzOhuit2f1TirHwIuWn9OIyS4J6ldUitif9aLE9rcn3kmjUYfHHwXYfntCsLp7C+AK3OK\ncbwqeQcwxpsJ/zjPBf6WcLklq7qGu5G82nOkuPJU1PfmPMIqxo9z6Ff8QLH6cx5h5eXHCWccRezP\nlwjxLAPeAvz+mP1F6c+xcfYzCf3Z7NeINOOsxOOuA26N5WEO/TbdZYQsORzL2frhZgOcgLHxLefQ\nLD7ZfhFvnwb+k3C56UnC9eXdhFPTp+Ix9fp2MvtwPHHl+Td/KlMuyntzBiFhfA34VqwrYn9W4/x6\nJs4i9mfVHuC7hIniIvbn2DjfBAxm6ovWn221JFP+O+CGWJ7IBwcnU3eMqY8QY54T4XOofRPxXOBO\nwoqJK6it6rqEwyf06vVtO/Rx+ET4eOOajL/52DiL9t7sIlyH/vyY+qL1Z6M4i9afx1C7pDMb+CHh\nC1SL1p+N4lycOaYI/TlpvkpYKno/4X8kizL7xvvBwcl2LmFlyBBhiVteVhDeJFsJSxyrsSwkzHPU\nWzrYqG9b7RvAE8B+whzQX04wrnb/zcfGeSHFe2+eQbhMsZXaMss1FK8/68V5LsXrz9cBP45xPgD8\nY6wvWn82irNo/SlJkiRJkiRJkiRJkiRJkiRJkiRJkpr1/+M6QS+6iX0IAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0xadb5e34c>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "test = array([676,206,230,256,280,433,337,466,497,512,794,428,452,512])\n",
+    "control = array([88,570,605,617,653,2913,924,286,1098,982,2346,321,615,519])\n",
+    "difference = test - control\n",
+    "scatter(control, difference);\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "b. Calculate the mean difference, its standard deviation, and a confidence interval.\n",
     "\n",
     "c. Calculate the median difference and a confidence interval and compare to the\n",
